--- a/index.css
+++ b/index.css
@@ -35,8 +35,6 @@ p{
     position: absolute;
     bottom: 5px;
     width: 99%;
-    /*left: 50%;
-    margin-left: -150px;*/
 }
 
 .message-box{
@@ -45,6 +43,12 @@ p{
     border: 1px solid gray;
     border-radius: 15px;
     transition-duration: 0.2s;
+}
+
+@media only screen and (max-width: 600px) {
+    .message-box{
+        width: 70%;
+    }
 }
 
 .message-send{
