--- a/index.css
+++ b/index.css
@@ -1,19 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400&display=swap');
 
 .username-input {
-    background-color: #c0bfbf;
+    background-color: #404040;
     border-radius: 3px;
-    border: 1px solid #808080;
     padding: 10px;
+    color: white;
+    border: none;
+    outline: none;
     
+}
+
+img {
+    filter: invert(100%);
 }
 
 p{
     font-family: 'Open Sans', sans-serif;
+    color:white;
 }
 
 .title{
     text-align: center;
+    color: white;
 }
 
 .username-container{
@@ -29,12 +37,21 @@ p{
     width: 100%;
     padding: 5px;
     margin-top: 15px;
+    background-color: #404040;
+    border-radius: 15px;
+    border: none;
+    color: white;
 }
 
 .message-box-container{
-    position: absolute;
-    bottom: 5px;
+    position: fixed;
+    bottom: 0px;
     width: 99%;
+    background-color: rgba(78, 78, 78, 0.1);
+    backdrop-filter: blur(5px);
+    border: 0px solid gray;
+    /*left: 50%;
+    margin-left: -150px;*/
 }
 
 .message-box{
@@ -43,13 +60,13 @@ p{
     border: 1px solid gray;
     border-radius: 15px;
     transition-duration: 0.2s;
+    background-color: rgba(0,0,0,0.1);
+    backdrop-filter: blur(5px);
+    outline: none;
+    color: rgba(255, 243, 243, 0.507);
 }
 
-@media only screen and (max-width: 600px) {
-    .message-box{
-        width: 70%;
-    }
-}
+
 
 .message-send{
     display: none;
@@ -58,6 +75,9 @@ p{
     border: 1px solid gray;
     border-radius: 0 15px 15px 0;
     transition-duration: 0.5s;
+    background-color: rgba(0,0,0,0.1);
+    backdrop-filter: blur(5px);
+    color: rgba(255, 243, 243, 0.507);
 }
 
 
@@ -66,9 +86,16 @@ p{
     width: 100%;
     float: left;
     overflow-y: auto;
-    height: 550px;
+    height: 100%;
+    margin-bottom: 35px;
+    
 }
 
 
+@media only screen and (max-width: 600px) {
+    .message-box{
+        width: 70%;
+    }
 
+}
 
