--- a/index.css
+++ b/index.css
@@ -1,101 +1,291 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400&display=swap');
-
-.username-input {
-    background-color: #404040;
-    border-radius: 3px;
-    padding: 10px;
-    color: white;
-    border: none;
+body{
+    /* https://www.color-hex.com/color/d3d3d3 */
+    background-color: #fff; /*#f6f6f6, EBEBD3, fafafa*/
+    font-family: Bungee Outline;
+    font-weight: 900;
+  
+    overflow: hidden;
+    animation: blur 0.5s ease-out;
+  
+  }
+  *{
     outline: none;
-    
-}
-
-img {
-    filter: invert(100%);
-}
-
-p{
-    font-family: 'Open Sans', sans-serif;
-    color:white;
-}
-
-.title{
+    border: none;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+  }
+  #title_container{
+    width: 100%;
+    height: 225px;
+  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  
+    background-color: #D64045;/*#467599;*/
+    border-bottom: 5px solid #fff;
+    box-shadow: 0 0 30px -18px #D64045;
+  
+  }
+  #title_inner_container{
+    width: 100%;
+    height: 100%;
+  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  
+    /* background-color: #083D77; */
+    border-radius: 200px;
+  }
+  #title{
+    display: inline-block;
+    color: #fff;/*EBEBD3, C5283D*/
+    font-size: 55px;
+    letter-spacing: 2px;
+    user-select: none;
+  }
+  
+  #join_container{
+    width: 100%;
+    height: 200px;
+  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  
+    float: left;
+    margin-top: 80px;
+  
+  }
+  #join_inner_container{
+    width: 50%;
+    height: 100%;
+  }
+  #join_input_container{
+    width: 100%;
+    height: 50px;
+  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  
+    float: left;
+  }
+  #join_input{
+    width: 60%;
+    height: 40px;
+  
+    color: #1D3354;
+    font-family: Varela Round;
+    font-size: 15px;
+    font-weight: bold;
     text-align: center;
-    color: white;
-}
-
-.username-container{
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-}
-
-.login-button{
-    display: none;
+    background-color: Transparent;
+    border-bottom: 2px dashed #1D3354;
+  
+  }
+  #join_input:focus{
+    box-shadow: 0 10px 30px -17px #1D3354;
+  }
+  #join_button_container{
     width: 100%;
-    padding: 5px;
-    margin-top: 15px;
-    background-color: #404040;
-    border-radius: 15px;
-    border: none;
-    color: white;
-}
-
-.message-box-container{
-    position: fixed;
-    bottom: 0px;
-    width: 99%;
-    background-color: rgba(78, 78, 78, 0.1);
-    backdrop-filter: blur(5px);
-    border: 0px solid gray;
-    /*left: 50%;
-    margin-left: -150px;*/
-}
-
-.message-box{
-    width: 92%;
-    padding: 10px;
-    border: 1px solid gray;
-    border-radius: 15px;
-    transition-duration: 0.2s;
-    background-color: rgba(0,0,0,0.1);
-    backdrop-filter: blur(5px);
-    outline: none;
-    color: rgba(255, 243, 243, 0.507);
-}
-
-
-
-.message-send{
-    display: none;
-    width: 70px;
-    padding: 10px;
-    border: 1px solid gray;
-    border-radius: 0 15px 15px 0;
-    transition-duration: 0.5s;
-    background-color: rgba(0,0,0,0.1);
-    backdrop-filter: blur(5px);
-    color: rgba(255, 243, 243, 0.507);
-}
-
-
-.message-showroom{
-    display: none;
+    height: 50px;
+  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  
+    float: left;
+  }
+  #join_button{
+    width: 60%;
+    height: 40px;
+  
+    font-family: Varela Round;
+    font-size: 15px;
+    font-weight: bold;
+    text-align: center;
+    color: #fff;
+  }
+  
+  #chat_container{
     width: 100%;
+    height: 450px;
+  
+    display: flex;
+    justify-content: center;
+  
+    float: left;
+    margin-top: 40px;
+    /* Fade in container */
+    animation: fadeIn 1s linear;
+  
+  }
+  #chat_inner_container{
+    width: 40%;
+    height: 100%;
+  }
+  #chat_content_container{
+    width: 100%;
+    height: 90%;
+  
     float: left;
     overflow-y: auto;
+    font-family: Varela Round;
+  
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  #chat_input_container{
+    width: 100%;
+    height: 10%;
+  
+    float: left;
+    border-bottom: 2px dashed #1D3354;
+    background-color: Transparent;
+  
+    padding-left: 15px;
+    padding-right: 15px;
+    font-family: Varela Round;
+    margin-top: 10px;
+  }
+  #chat_input{
+    width: 95%;
     height: 100%;
-    margin-bottom: 35px;
-    
-}
-
-
-@media only screen and (max-width: 600px) {
-    .message-box{
-        width: 70%;
-    }
-
-}
-
+    float: left;
+    background-color: Transparent;
+    color: #1D3354;
+    font-size: 15px;
+  }
+  #chat_input_send{
+    width: 5%;
+    height: 100%;
+    float: left;
+    font-size: 18px;
+    background-color: Transparent;
+    text-align: right;
+    color: #ccc;
+  }
+  #chat_input_send.enabled{
+    color: #D64045;
+    background-color: Transparent;
+    cursor: pointer;
+  
+  }
+  #chat_logout_container{
+    width: 100%;
+    display: inline-block;
+  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  
+    float: left;
+    margin-top: 20px;
+  }
+  #chat_logout{
+    color: #D64045;
+    cursor: pointer;
+  }
+  #chat_logout:hover{
+    text-decoration: underline;
+  }
+  .message_container{
+    width: 100%;
+    display: inline-block;
+    margin-bottom: 20px;
+  
+  }
+  .message_inner_container{
+    width: 100%;
+    display: inline-block;
+  
+    color: #1D3354;
+  }
+  .message_user_container{
+    width: 100%;
+    display: inline-block;
+  }
+  .message_user{
+    font-weight: bold;
+    font-size: 14px;
+  }
+  .message_content_container{
+    width: 100%;
+    display: inline-block;
+  
+    white-space: pre-wrap;
+    word-wrap: break-word;
+  }
+  .message_content{
+    font-weight: normal;
+    font-size: 14px;
+    margin-top: 5px;
+  }
+  
+  .enabled{
+    transition: background-color 0.5s;
+    color: #fff;
+    background-color: #D64045; /*#5B7553;*/
+    cursor: pointer;
+  }
+  #title_container.chat_title_container{
+    transition: 0.8s;
+    transition-timing-function: ease-in-out;
+    height: 100px;
+  }
+  #title.chat_title{
+    transition: 0.8s;
+    font-size: 47px;
+  }
+  .loader_container{
+    width: 100%;
+    height: 100%;
+  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .loader {
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    animation: spin 1s linear infinite;
+  
+    border-top: 6px solid #D64045;
+    border-bottom: 6px solid #1D3354;
+    border-left: 6px solid #E9FFF9;
+    border-right: 6px solid #E9FFF9;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+  @keyframes fadeIn {
+     0% {opacity: 0;}
+     100% {opacity: 1;}
+  }
+  @keyframes blur {
+    0% {filter: blur(5px);}
+    100% {}
+  }
+  ::selection {
+    background-color: #D64045;
+    color: #fff;
+  }
+  /* width */
+  ::-webkit-scrollbar {
+    width: 6px;
+  }
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #cccs;
+  }
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #D64045;
+    border-radius: 5px;
+  }
