--- a/index.css
+++ b/index.css
@@ -135,7 +135,9 @@ p{
 .message-send{
     display: none;
     width: 70px;
-    padding: 10px;
+    padding: 6px;
+    position: relative;
+    top: 4px;
     border: 1px solid gray;
     border-radius: 0 15px 15px 0;
     transition-duration: 0.5s;
